сделал удобную кнопку назад

--- a/orders/templates/orders/client_detail.html
+++ b/orders/templates/orders/client_detail.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
     <div class="back-button-container" style="margin-bottom: 20px;">
-        <a href="{% url 'orders:clients' %}" class="button back-button">← Вернуться к списку клиентов</a>
+        <a href="javascript:history.back()" class="button back-button">← Назад</a>
     </div>
 
     <div class="client-info">
