сделал удобную кнопку назад2

--- a/orders/templates/orders/order_detail.html
+++ b/orders/templates/orders/order_detail.html
@@ -6,7 +6,7 @@
 {% block content %}
     <div class="container">
         <div class="back-button-container" style="margin-bottom: 20px;">
-            <a href="{% url 'orders:orders' %}" class="button back-button">← Вернуться к списку заказов</a>
+            <a href="javascript:history.back()" class="button back-button">← Назад</a>
         </div>
 
         <div class="order-details">
